--- a/src/content/graphos/delivery/schema-proposals/implementation.mdx
+++ b/src/content/graphos/delivery/schema-proposals/implementation.mdx
@@ -58,7 +58,7 @@ Regardless, it's best to run checks before publishing changes to make sure any e
 You can [configure schema checks](../configuration/#configure-schema-checks) to include a **Proposals** task that verifies whether the changes a check is running on have matching and approved schema proposals.
 
 <img
-  src="../img/schema-proposals/proposal-check-settings.jpg"
+  src="../../img/schema-proposals/proposal-check-settings.jpg"
   className="screenshot"
   alt="Schema proposals settings in Studio"
 />
@@ -74,7 +74,7 @@ The Proposals task also checks _comments_ in the SDL. For example, the Proposals
 When a check with the **Proposals** task runs, you can see the following by clicking the **Proposals** task on the **Checks** page:
 
 <img
-  src="../img/schema-proposals/proposal-check-diff.jpg"
+  src="../../img/schema-proposals/proposal-check-diff.jpg"
   className="screenshot"
   alt="Schema proposals check task in Studio"
 />
@@ -99,7 +99,7 @@ Publishing changes that are part of a schema proposal uses the same [publishing 
 When a schema published to a [proposal's source variant](./creation/#start-a-proposal) contains changes that are in an **Approved**, **Open for Feedback**, or **Draft** proposal, the corresponding [launch](./launches) appears in the proposal's activity log.
 
 <img
-  src="../img/schema-proposals/proposal-implementation-status.jpg"
+  src="../../img/schema-proposals/proposal-implementation-status.jpg"
   className="screenshot"
   alt="Schema proposals overview in Studio"
 />
