--- a/src/content/graphos/delivery/schema-proposals/review.mdx
+++ b/src/content/graphos/delivery/schema-proposals/review.mdx
@@ -21,7 +21,7 @@ This article describes actions in the **Proposal review** stage of the [schema p
 Proposal creators and reviewers can review different aspects of a proposal from its non-editor tabs in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content).
 
 <img
-  src="../img/schema-proposals/proposal-overview.jpg"
+  src="../../img/schema-proposals/proposal-overview.jpg"
   className="screenshot"
   alt="Schema proposals overview in Studio"
 />
@@ -40,7 +40,7 @@ Proposal creators and reviewers can review different aspects of a proposal from 
 A proposal's **Changes** tab shows both a **Summary** and **Detailed view** of the schema changes that make up a proposal:
 
 <img
-  src="../img/schema-proposals/changes.jpg"
+  src="../../img/schema-proposals/changes.jpg"
   className="screenshot"
   alt="Schema proposals changes tab in Studio"
   width="700"
@@ -57,23 +57,16 @@ You can use the left nav to view changes for a particular subgraph, or see the c
 You can comment on any line in the detailed view's diff. Hover over the line and click the chat icon that appears.
 
 <img
-  src="../img/schema-proposals/add-comment.jpg"
+  src="../../img/schema-proposals/add-comment.jpg"
   className="screenshot"
   alt="Schema proposals changes tab in Studio"
 />
 
 Write your comment in the panel that appears on the right.
-
-<img
-  src="../img/schema-proposals/write-comment.jpg"
-  className="screenshot"
-  alt="Schema proposals changes tab in Studio"
-/>
-
 Click on the **•••** button next to a comment to edit or delete it.
 
 <img
-  src="../img/schema-proposals/edit-comment.jpg"
+  src="../../img/schema-proposals/edit-comment.jpg"
   className="screenshot"
   alt="Schema proposals changes tab in Studio"
 />
@@ -81,7 +74,7 @@ Click on the **•••** button next to a comment to edit or delete it.
 Share a comment by clicking the link button to copy its URL.
 
 <img
-  src="../img/schema-proposals/share-comment.jpg"
+  src="../../img/schema-proposals/share-comment.jpg"
   className="screenshot"
   alt="Schema proposals changes tab in Studio"
 />
@@ -89,7 +82,7 @@ Share a comment by clicking the link button to copy its URL.
 The blue tab that appears next to a line shows the number of comments that line has.
 
 <img
-  src="../img/schema-proposals/comments-number.jpg"
+  src="../../img/schema-proposals/comments-number.jpg"
   className="screenshot"
   alt="Schema proposals changes tab in Studio"
 />
@@ -99,7 +92,7 @@ The blue tab that appears next to a line shows the number of comments that line 
 Once you've reviewed a proposal, click the **Add review** button on the top right of the proposal's overview tab to formalize your review.
 
 <img
-  src="../img/schema-proposals/add-review.jpg"
+  src="../../img/schema-proposals/add-review.jpg"
   className="screenshot"
   alt="Schema proposals overview tab in Studio"
 />
@@ -107,7 +100,7 @@ Once you've reviewed a proposal, click the **Add review** button on the top righ
 A dialog appears where you can leave general commentary on the proposal and select to approve the proposal.
 
 <img
-  src="../img/schema-proposals/add-review-modal.jpg"
+  src="../../img/schema-proposals/add-review-modal.jpg"
   className="screenshot"
   alt="Schema proposals overview tab in Studio"
   width="300"
@@ -116,7 +109,7 @@ A dialog appears where you can leave general commentary on the proposal and sele
 You can edit your review by clicking the pencil icon next to your name in the list of **Reviewers**.
 
 <img
-  src="../img/schema-proposals/edit-review.jpg"
+  src="../../img/schema-proposals/edit-review.jpg"
   className="screenshot"
   alt="Schema proposals overview tab in Studio"
   width="200"
