--- a/src/content/graphos/delivery/schema-proposals/creation.mdx
+++ b/src/content/graphos/delivery/schema-proposals/creation.mdx
@@ -20,21 +20,27 @@ This article describes actions in the **Proposal creation** stage of the [schema
 
 You can create a new proposal in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) from a graph's proposals list. To access the proposals list page, either:
 
-  - On the **Graphs** page, click the pencil icon with the tooltip that says **Go to schema change proposals** for a particular graph.
+  - From a particular graph, open the **Proposals** page from the left navigation.
 
     <img
-      src="../img/schema-proposals/proposals-list-page.jpg"
+      src="../../img/schema-proposals/proposals-left-nav.jpg"
       className="screenshot"
       alt="Graphs page in Studio"
     />
-  
-  - From a particular graph, open the **Proposals** page from the left navigation.
+
+  - On the **Graphs** page, click the pencil icon with the tooltip that says **Go to schema change proposals** for a particular graph.
+
+    <img
+      src="../../img/schema-proposals/proposals-list-page.jpg"
+      className="screenshot"
+      alt="Graphs page in Studio"
+    />
 
 Follow the steps below to create a new proposal:
 
 1. Click the **Propose changes** button in the top right. A dialog entitled **Propose schema changes** appears.
    <img
-     src="../img/schema-proposals/proposal-modal.jpg"
+     src="../../img/schema-proposals/proposal-dialog.jpg"
      className="screenshot"
      alt="Schema proposals dialog in Studio"
      width="500px"
@@ -47,7 +53,7 @@ Follow the steps below to create a new proposal:
 
    </Note>
 
-3. Select a **source variant**. The source variant's schema is used to start the proposal, but the proposal isn't kept in sync with any schema changes that occur while the proposal is in progress.
+3. If you've started the proposal from a graph rather than a particular variant, select a **source variant**. The source variant's schema is used to start the proposal, but the proposal isn't kept in sync with any schema changes that occur while the proposal is in progress.
 
    <Tip>
 
@@ -74,7 +80,7 @@ Once you've created the proposal, you land on the newly created proposal's **Edi
 You can directly edit one or more subgraph schemas on a proposal's **Editor** tab.
 
 <img
-  src="../img/schema-proposals/subgraph-schema-editor.jpg"
+  src="../../img/schema-proposals/subgraph-schema-editor.jpg"
   className="screenshot"
   alt="Schema proposals editor in Studio"
 />
@@ -83,7 +89,7 @@ To start a new subgraph, click **+Add new** from the subgraph schema selector in
 You can also delete existing subgraphs and rename newly created ones by clicking the **•••** menu to the right of a subgraph's name.
 
 <img
-  src="../img/schema-proposals/subgraph-schema-selector.jpg"
+  src="../../img/schema-proposals/subgraph-schema-selector.jpg"
   className="screenshot"
   alt="Schema proposals editor in Studio"
   width="200px"
@@ -91,10 +97,10 @@ You can also delete existing subgraphs and rename newly created ones by clicking
 
 ### Lint changes
 
-To lint the schema changes you've made, click the Lint schema icon in the top right of the editor.
+To lint the schema changes you've made, click the Lint schema button in the top right of the editor.
 
 <img
-  src="../img/schema-proposals/lint-changes.jpg"
+  src="../../img/schema-proposals/lint-changes.jpg"
   className="screenshot"
   alt="Schema proposals editor in Studio"
   width="500px"
@@ -104,7 +110,7 @@ Clicking the button opens a panel where you can run the [schema linter](./schema
 After successfully running a lint on your schema, the panel displays any linter violations so you can fix them accordingly.
 
 <img
-  src="../img/schema-proposals/linter-violations.jpg"
+  src="../../img/schema-proposals/linter-violations.jpg"
   className="screenshot"
   alt="Schema proposals editor in Studio"
   width="500px"
@@ -113,7 +119,7 @@ After successfully running a lint on your schema, the panel displays any linter 
 If you are having trouble finding the exact location of where the lint violation occurred, click the line in the violations list to highlight it in the editor.
 
 <img
-  src="../img/schema-proposals/linter-location.jpg"
+  src="../../img/schema-proposals/linter-location.jpg"
   className="screenshot"
   alt="Schema proposals editor in Studio"
   width="500px"
@@ -133,7 +139,7 @@ Once you've made changes, click the **Save Revision** button in the top right of
 A dialog appears where you can optionally include a summary of your changes. This field accepts [Markdown](https://www.markdownguide.org/getting-started/).
 
 <img
-  src="../img/schema-proposals/save-revision.jpg"
+  src="../../img/schema-proposals/save-revision.jpg"
   className="screenshot"
   alt="Schema proposals editor in Studio"
   width="500px"
@@ -152,7 +158,7 @@ You can think of each revision as equal to a [commit](<https://en.wikipedia.org/
 [Schema checks](./schema-checks) automatically run each time you save a revision. These appear in a proposal's **Checks** tab.
 
 <img
-  src="../img/schema-proposals/schema-checks.jpg"
+  src="../../img/schema-proposals/schema-checks.jpg"
   className="screenshot"
   alt="Schema checks for a proposal in Studio"
 />
@@ -182,19 +188,19 @@ You can manually change the proposal's status from the overview page by clicking
   - You can always reopen a proposal by resetting the status to Draft or Open for feedback
 
 <img
-  src="../img/schema-proposals/edit-status.jpg"
+  src="../../img/schema-proposals/edit-status.jpg"
   className="screenshot"
   alt="Schema proposals overview tab in Studio"
 />
 
-**Approved** and **Implemented** statuses are automatically set once [necessary conditions](./schema-proposals#proposal-statuses) have been met.
+**Approved** and **Implemented** statuses are automatically set once [necessary conditions](./#proposal-statuses) have been met.
 
 ## Request review
 
 Add reviewers by clicking **Manage reviewers** on the proposal's overview tab:
 
 <img
-  src="../img/schema-proposals/request-approval.jpg"
+  src="../../img/schema-proposals/manage-reviewers.jpg"
   className="screenshot"
   alt="Schema proposals overview tab in Studio"
 />
