--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -22,42 +22,35 @@ import {
 <Docset
   icon={DOCSET_ICONS.graphql}
   title="Ship features faster"
-  description="Understand how GraphQL and Apollo can help improve your organization's developer experience and ship features faster. Learn about GraphQL's advantages like efficient data fetching and robust tooling."
+  description="Understand how GraphQL and Apollo can improve your organization's developer experience and help ship features faster."
   path="/intro/benefits"
   cta="Learn about GraphQL"
 />
 <Docset
   icon={DOCSET_ICONS.graphos}
-  title="Operate at any scale"
-  description="Connect any GraphQL API to Apollo's cloud platform to enable powerful features like collaborative schema development and governance, automated deployments, and field and operation-level observability."
+  title="Operate at scale"
+  description="Connect any GraphQL API to Apollo's cloud platform to enable powerful features like schema governance and metrics reporting."
   path="/graphos"
   cta="Learn about GraphOS"
 />
 </DocsetGrid>
 
-Apollo provides tools and resources for every developer who interacts with GraphQL. That's whether you're [building your first API](#for-api-implementers), [querying an existing one](#for-client-developers), or [moving your entire organization onto the supergraph](#for-enterprise-architects).
+Apollo provides tools and resources for every developer who interacts with GraphQL. That's whether you're [building your first API](#for-api-implementers), [querying an existing one](#for-client-developers), or [moving your entire organization onto the supergraph](#for-architects).
 
-## For enterprise architects
+## For architects
 
+<Docset
+  icon={DOCSET_ICONS.federation}
+  title="Unify APIs"
+  description="Implement a single, unified supergraph that combines multiple APIs with Apollo Federation."
+  path="/federation"
+  cta="Explore Apollo Federation docs"
+/>
 <DocsetGrid>
-  <Docset
-    icon={DOCSET_ICONS.federation}
-    title="Combine APIs"
-    description="Implement a single, unified supergraph that combines multiple APIs with Apollo Federation."
-    path="/federation"
-    cta="Explore Apollo Federation docs"
-  />
-  <Docset
-    icon={DOCSET_ICONS.router}
-    title="Host your router"
-    description="Deploy and configure your supergraph's router in your own infrastructure."
-    path="/router"
-    cta="Explore the Apollo Router docs"
-  />
   <Docset
     icon={DOCSET_ICONS.odyssey}
     title="Master concepts"
-    description="Boost your skills with hands-on tutorials and trainings on GraphOS and enterprise best practices."
+    description="Boost your skills with hands-on tutorials on GraphQL, GraphOS, and enterprise best practices."
     path="https://www.apollographql.com/tutorials/browse?categories=GraphOS"
     cta="Explore tutorials"
   />
@@ -70,7 +63,7 @@ Apollo provides tools and resources for every developer who interacts with Graph
   />
 </DocsetGrid>
 
-## For API implementers
+## For API developers
 
 <Docset
   icon={DOCSET_ICONS.nodejs}
