--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -24,8 +24,8 @@ Apollo provides tools and resources for every developer who interacts with Graph
 
 <GradientCard
   icon={DOCSET_ICONS.graphos}
-  title="Connect to GraphOS"
-  description="Connect any GraphQL API to Apollo's cloud platform to enable powerful features like schema governance and metrics reporting."
+  title="Scale your services"
+  description="Build, manage, and scale your GraphQL platform."
   path="/graphos"
   cta="Learn about GraphOS"
 />
@@ -87,7 +87,7 @@ Apollo provides tools and resources for every developer who interacts with Graph
 <GradientCard
   icon={DOCSET_ICONS.graphql}
   title="Ship features faster"
-  description="Understand how GraphQL and Apollo can improve your organization's developer experience and help ship features faster."
+  description="Understand how GraphQL and Apollo can enhance developer experience and help ship features faster."
   path="/intro/benefits"
   cta="Learn about GraphQL"
 />
