--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -16,19 +16,18 @@ import {
   SiYoutube
 } from 'react-icons/si';
 
-**Apollo GraphOS** is the developer platform for building a [**supergraph**](./intro/platform/)—a unified network of your organization's data and services, all composed into a single distributed **GraphQL API**.
-
 Apollo provides tools and resources for every developer who interacts with GraphQL. That's whether you're just [getting started with GraphQL](#for-graphql-newcomers), [building your first API](#for-api-developers), [querying an existing one](#for-client-developers), or [moving your entire organization onto the supergraph](#for-architects).
 
 ## For architects
 
 <GradientCard
   icon={DOCSET_ICONS.graphos}
-  title="Scale your services"
-  description="Build, manage, and scale your GraphQL platform."
+  title="Build and scale a supergraph"
+  description="Apollo GraphOS is the developer platform for building a supergraph—a unified network of your organization's data and services, all composed into a single distributed GraphQL API."
   path="/graphos"
   cta="Learn about GraphOS"
 />
+
 <DocsetGrid>
   <Docset
     icon={DOCSET_ICONS.odyssey}
