--- a/src/content/graphos/delivery/schema-proposals/review.mdx
+++ b/src/content/graphos/delivery/schema-proposals/review.mdx
@@ -33,7 +33,7 @@ Proposal creators and reviewers can review different aspects of a proposal from 
   - Select reviewers.
 - The [**Changes**](#changes) tab shows both a summary and detailed view of the schema changes that make up a proposal.
   - All viewers can also [provide commentary](#add-comments) on changes from the **Changes** tab.
-- The [**Checks**](./creation#schema-checks) tab shows all [schema checks](./schema-checks) that have run for [saved revisions](./creation#save-revisions).
+- The [**Checks**](./creation#schema-checks) tab shows all [schema checks](../schema-checks) that have run for [saved revisions](./creation#save-revisions).
 
 ### Changes
 
