--- a/src/content/shared/approved-schema-proposals.mdx
+++ b/src/content/shared/approved-schema-proposals.mdx
@@ -10,7 +10,7 @@ To set the proposal's status to **Open for feedback** or another status, [manual
 <img
   src="../graphos/img/schema-proposals/approved-proposal.jpg"
   className="screenshot"
-  alt="Schema proposals overview tab in Studio"
+  alt="Approved schema proposal in Studio"
 />
 
-Once a proposal is approved, your team can then begin [implementing the approved changes](/graphos/delivery/implement-proposals).
+Once a proposal is approved, your team can then begin [implementing the approved changes](/graphos/delivery/schema-proposals/implementation).
