--- a/src/content/graphos/delivery/schema-proposals/index.mdx
+++ b/src/content/graphos/delivery/schema-proposals/index.mdx
@@ -48,7 +48,7 @@ Team members [create](./creation), [review](./review), and [approval](./review#a
 
 [Org and graph admins](../../org/members/#organization-wide-member-roles) can [configure schema checks](../schema-checks/#proposals-checks) to ensure an organization only publishes changes approved through a proposal.
 
-Before diving into proposal process details, understanding proposal statuses is helpful.
+Before diving into schema proposal workflow, understanding proposal statuses is helpful.
 
 ### Proposal statuses
 
