Apply suggestions from code review
Co-authored-by: Edward Huang <18322228+shorgi@users.noreply.github.com>

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -22,8 +22,8 @@ Apollo provides tools and resources for every developer who interacts with Graph
 
 <GradientCard
   icon={DOCSET_ICONS.graphos}
-  title="Build and scale a supergraph"
-  description="Apollo GraphOS is the developer platform for building a supergraph—a unified network of your organization's data and services, all composed into a single distributed GraphQL API."
+  title="Build a supergraph"
+  description="Use Apollo GraphOS to define, build, connect, and observe all of your data services together in a supergraph."
   path="/graphos"
   cta="Learn about GraphOS"
 />
@@ -32,7 +32,7 @@ Apollo provides tools and resources for every developer who interacts with Graph
   <Docset
     icon={DOCSET_ICONS.odyssey}
     title="Master concepts"
-    description="Boost your skills with hands-on tutorials on GraphQL, GraphOS, and enterprise best practices."
+    description="Learn hands-on with tutorials on GraphQL, GraphOS, and enterprise best practices."
     path="https://www.apollographql.com/tutorials/browse?categories=GraphOS"
     cta="Explore tutorials"
   />
@@ -58,14 +58,14 @@ Apollo provides tools and resources for every developer who interacts with Graph
   <Docset
     icon={DOCSET_ICONS.java}
     title="Build a server in Java"
-    description="Explore the tutorial on implementing a GraphQL API with Java and DGS."
+    description="Explore a tutorial on implementing a GraphQL API with Java and DGS."
     path="https://www.apollographql.com/tutorials/intro-dgs"
     cta="Begin tutorial"
   />
   <Docset
     icon={DOCSET_ICONS.csharp}
     title="Build a server in C#"
-    description="Explore the tutorial on implementing a GraphQL API with .NET (C#) and Hot Chocolate."
+    description="Explore a tutorial on implementing a GraphQL API with .NET (C#) and Hot Chocolate."
     path="https://www.apollographql.com/tutorials/intro-hotchocolate"
     cta="Begin tutorial"
   />
@@ -85,8 +85,8 @@ Apollo provides tools and resources for every developer who interacts with Graph
 
 <GradientCard
   icon={DOCSET_ICONS.graphql}
-  title="Ship features faster"
-  description="Understand how GraphQL and Apollo can enhance developer experience and help ship features faster."
+  title="Improve developer velocity"
+  description="Understand how GraphQL and Apollo help enhance developer experience and ship features faster."
   path="/intro/benefits"
   cta="Learn about GraphQL"
 />
